DELETED: Current code and centeres into acl from beginning

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,18 +6,18 @@
 # |===================================================================================|
 #
 
-# Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables
-# and creates them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the
-# information and the schema. I do not know the difference between these two but they seem equivalent.
-spring.jpa.hibernate.ddl-auto = validate
+# Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
+# them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the information.
+# "None does nothing"
+eChempad.db.policy = none
+
+# To log the SQl queries
+eChempad.db.show-sql = false
 
 # Logging level for the relational database [TRACE, DEBUG, INFO]
 logging.level.org.hibernate.SQL = INFO
 logging.level.org.hibernate.type = INFO
 logging.level.org.springframework = INFO
-
-# To log the SQl queries
-spring.jpa.show-sql = false
 
 # Enable Cross-site request forgery protection
 security.enable.csrf = true
