--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,15 +6,15 @@
 # |===================================================================================|
 #
 
-# Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables
-# and creates them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the
-# information and the schema. I do not know the difference between these two but they seem equivalent.
-spring.jpa.hibernate.ddl-auto = create
+# Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
+# them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the information.
+# "None does nothing"
+eChempad.db.policy = create-drop
+
+# To log the SQl queries
+eChempad.db.show-sql = true
 
 # Logging level for the relational database [TRACE, DEBUG, INFO]
 logging.level.org.hibernate.SQL = TRACE
 logging.level.org.hibernate.type = TRACE
 logging.level.org.springframework = TRACE
-
-# To log the SQl queries
-spring.jpa.show-sql = true
