--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@
 # | This software is the property of ICIQ.                                            |
 # |===================================================================================|
 #
+# All properties that begin with eChempad are properties that are explicitly used by the code. Other configure things
+# in the background with code running implicitly.
 
 #####################################
 ### APPLICATION PROFILE SELECTION ###
@@ -18,44 +20,35 @@ spring.profiles.active = dev
 # Fallback profile (set if a certain profile is not active)
 spring.profiles.default = prod
 
-####################
-### DEFAULT OPTS ###
-####################
-
-# To remove a warning about open session in view, which is considered an anti-pattern. It can cause performance problems
-# when active in some projects, but when is inactive we need to handle the LazyInitializationException by ourselves.
-# https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
-spring.jpa.open-in-view = true
 
 #########################################
 ### Setting up connection to psql DB ####
 #########################################
 
+# Selects the SQL dialect used to generate appropriate statements for postgreSQL
+eChempad.db.dialect = org.hibernate.dialect.PostgreSQLDialect
+
 # Add DB type (psql)
-spring.sql.init.platform = postgresql
-spring.datasource.driver-class-name = org.postgresql.Driver
+eChempad.db.driver = org.postgresql.Driver
 
 # Set connection to the desired table of DB using URL
-spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/eChempad
+eChempad.db.url = jdbc:postgresql://127.0.0.1:5432/eChempad
 
 # Database credentials
-spring.datasource.username = amarine
-spring.datasource.password = chemistry
+eChempad.db.username = amarine
+eChempad.db.password = chemistry
 
-# To log the SQl queries
-spring.jpa.show-sql = false
+# To remove a warning about open session in view, which is considered an anti-pattern. It can cause performance problems
+# when active in some projects, but when is inactive we need to handle the LazyInitializationException by ourselves.
+# https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
+spring.jpa.open-in-view = false
 
-# Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
-# them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the information.
-# "None does nothing"
-spring.jpa.hibernate.ddl-auto = update
 
-# Selects the SQL dialect used to generate appropriate statements for postgreSQL
-# hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+
 
 # To autoconfigure the currentSessionContext
 spring.jpa.properties.hibernate.current_session_context_class = thread
-# hibernate.current_session_context_class = thread
 
 # https://www.baeldung.com/spring-boot-change-port
 server.port=8081
