--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,21 +6,18 @@
 # |===================================================================================|
 #
 
-# Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables
-# and creates them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the
-# information and the schema. I do not know the difference between these two but they seem equivalent.
-spring.jpa.hibernate.ddl-auto = create-drop
+# Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
+# them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the information.
+# "None does nothing"
+eChempad.db.policy = create-drop
+
+# To log the SQl queries
+eChempad.db.show-sql = true
 
 # Logging level for the relational database [TRACE, DEBUG, INFO]
 logging.level.org.hibernate.SQL = DEBUG
-logging.level.org.hibernate.type = INFO
-logging.level.org.springframework = INFO
-org.hibernate.event.internal.DefaultPersistEventListener = TRACE
-
-# To log the SQl queries
-spring.jpa.show-sql = true
-
-
+logging.level.org.hibernate.type = DEBUG
+logging.level.org.springframework = DEBUG
 
 
 
