--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,14 +38,19 @@ eChempad.db.url = jdbc:postgresql://127.0.0.1:5432/eChempad
 eChempad.db.username = amarine
 eChempad.db.password = chemistry
 
+# Output the SQL queries
+eChempad.db.show-sql = true
+
+# Format of the SQL queries written in the output
+eChempad.db.format_sql = yes
+
+# Naming schema used when naming tables and properties, it can be SpringImplicitNamingStrategy or SpringPhysicalNamingStrategy
+eChempad.db.naming_strategy = SpringPhysicalNamingStrategy
+
 # To remove a warning about open session in view, which is considered an anti-pattern. It can cause performance problems
 # when active in some projects, but when is inactive we need to handle the LazyInitializationException by ourselves.
 # https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
 spring.jpa.open-in-view = false
-
-
-
-
 
 # To autoconfigure the currentSessionContext
 spring.jpa.properties.hibernate.current_session_context_class = thread
@@ -72,17 +77,17 @@ server.port=8081
 # spring.session.* = ...                 # Configs for the HTTP session, with optional SQL persistence
 
 # Default user It does not work I do not why
-spring.security.user.name=eChempad
+#spring.security.user.name=eChempad
 # Default password
-spring.security.user.password=password
+#spring.security.user.password=password
 # User roles
-spring.security.user.roles = "USER"
+#spring.security.user.roles = "USER"
 
 # Disable Cross-site request forgery protection
-security.disable.csrf = true
+eChempad.security.csrf = false
 
 # Disable Cross-origin resource sharing protection
-security.disable.cors = true
+eChempad.security.cors = false
 
 ##############################
 ### File upload / download ###
