UPDATED: Added more beans and ocnfig of acls, not working because @Value anotation is not working as expected, is not injecting values+ç

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -34,5 +34,20 @@
       "name": "signals.APIKeys.filename",
       "type": "java.lang.String",
       "description": "Filename for a file containing the API key. Used in testing."
+    },
+    {
+      "name": "eChempad.db.dialect",
+      "type": "java.lang.String",
+      "description": "Description for eChempad.db.dialect."
+    },
+    {
+      "name": "eChempad.db.driver",
+      "type": "java.lang.String",
+      "description": "Description for eChempad.db.driver."
+    },
+    {
+      "name": "eChempad.db.url",
+      "type": "java.lang.String",
+      "description": "Description for eChempad.db.url."
     }
   ] }
