--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@
 # Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
 # them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the information.
 # "None does nothing"
-eChempad.db.policy = create-drop
+eChempad.db.policy = create
 
 # To log the SQl queries
 eChempad.db.show-sql = true
