--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -12,9 +12,9 @@
 eChempad.db.policy = create-drop
 
 # To log the SQl queries
-eChempad.db.show-sql = true
+eChempad.db.show-sql = false
 
 # Logging level for the relational database [TRACE, DEBUG, INFO]
-logging.level.org.hibernate.SQL = TRACE
-logging.level.org.hibernate.type = TRACE
-logging.level.org.springframework = TRACE
+logging.level.org.hibernate.SQL = INFO
+logging.level.org.hibernate.type = INFO
+logging.level.org.springframework = INFO
