UPDATED: acl schema creation, addded properties to mutable service, added authorities class, added example data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,6 +58,15 @@ spring.jpa.properties.hibernate.current_session_context_class = thread
 # https://www.baeldung.com/spring-boot-change-port
 server.port=8081
 
+# Used to have the creation of DB with Hibernate using the JPA entities plus the usage of schema.sql file.
+# From https://www.baeldung.com/spring-boot-data-sql-and-schema-sql
+spring.jpa.defer-datasource-initialization = true
+
+# To be able to actually use the schema file, since the schema file is disabled for not embedded databases
+# From https://stackoverflow.com/questions/38040572/spring-boot-loading-initial-data
+spring.sql.init.mode=always
+
+
 # Maximum number of simultaneous connections to the DB
 # https://stackoverflow.com/questions/9802684/hibernate-config-connection-pool-size
 # hibernate.connection.pool_size = 10
