UPDATED: Journal save, researcher save, authentication works, next step configure finegrained access acl

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@
 # Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
 # them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the information.
 # "None does nothing"
-eChempad.db.policy = create
+eChempad.db.policy = validate
 
 # To log the SQl queries
 eChempad.db.show-sql = true
@@ -19,6 +19,8 @@ logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type = DEBUG
 logging.level.org.springframework = DEBUG
 
-
+# To see the logging data (by default false, potentially leaked data)
+logging.level.org.springframework.web=DEBUG
+spring.mvc.log-request-details=true
 
 
