--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,7 @@
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache-core</artifactId>
-			<!-- <version>2.6.11</version> -->
+			<version>2.6.11</version>
 		</dependency>
 
 
