UPDATED: pom changed for db time

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
 			<distribution>repo</distribution>
 			<comments>A business-friendly OSS license</comments>
-		</license>
+
 	</licenses>
 
 
@@ -60,12 +60,12 @@
 			<version>${spring.version}</version>
 		</dependency>
 
-		<!-- A dependency started appearing with error msg Caused by: java.lang.ClassNotFoundException: org.threeten.bp.LocalDateTime
+		<!-- A dependency started appearing with error msg Caused by: java.lang.ClassNotFoundException: org.threeten.bp.LocalDateTime -->
 		<dependency>
 			<groupId>org.threeten</groupId>
 			<artifactId>threetenbp</artifactId>
 			<version>1.6.0</version>
-		</dependency> -->
+		</dependency>
 
 		<!-- To import hibernate, which is used to achieve transparent persistence to a Database. Higher versions of
 		 hibernate are written as org.hibernate.orm, but are not compatible with JRE 8  -->
