UPDATED: Completed Crud calls with acl config ready

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,10 +50,13 @@ eChempad.db.naming_strategy = SpringPhysicalNamingStrategy
 # To remove a warning about open session in view, which is considered an anti-pattern. It can cause performance problems
 # when active in some projects, but when is inactive we need to handle the LazyInitializationException by ourselves.
 # https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
+# This should be false in production due to performance reasons
 spring.jpa.open-in-view = false
 
 # To autoconfigure the currentSessionContext
-spring.jpa.properties.hibernate.current_session_context_class = thread
+# https://stackoverflow.com/questions/25063995/spring-boot-handle-to-hibernate-sessionfactory
+#spring.jpa.properties.hibernate.current_session_context_class = org.springframework.orm.hibernate5.SpringSessionContext
+
 
 # https://www.baeldung.com/spring-boot-change-port
 server.port=8081
@@ -131,3 +134,7 @@ signals.APIKeys.filename=key
 # This property is advice to be set to false if the program has an error when trying to serialize empty beans (?)
 # https://stackoverflow.com/questions/15261456/how-do-i-disable-fail-on-empty-beans-in-jackson
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+# Configure lazy initializations vs eager. In production should be true, but for many reasons it makes no sense to not
+# initialize the objects when they are pulled from DB in repository code
+spring.main.lazy-initialization=true
