UPDATED: acls not reading schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,13 +61,25 @@ spring.jpa.open-in-view = false
 # https://www.baeldung.com/spring-boot-change-port
 server.port=8081
 
-# Used to have the creation of DB with Hibernate using the JPA entities plus the usage of schema.sql file.
+# The initialization using sql files (schema-postgresql.sql and data-postgresql.sql) does not work in certain computers (?)
+# Used to have the creation of DB with Hibernate using the JPA entities plus the usage of schema-postgresql.sql file.
 # From https://www.baeldung.com/spring-boot-data-sql-and-schema-sql
 spring.jpa.defer-datasource-initialization = true
+# To not initialize the schema on startup, because that invalidates the usage of the schema file
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
 
-# To be able to actually use the schema file, since the schema file is disabled for not embedded databases
+# To be able to actually use the schema file, since the schema file is disabled for not embedded databases.
+# The second property is added because when trying the project in another computer, the schema-postgresql.sql is not added
 # From https://stackoverflow.com/questions/38040572/spring-boot-loading-initial-data
 spring.sql.init.mode=always
+spring.sql.init.platform=postgresql
+spring.datasource.initialize = true
+spring.sql.init.data-locations=classpath:schema-postgresql.sql
+
+# Even with the two previous properties, data-postgresql.sql and schema-postgresql.sql are not loaded. We must include these keys
+# From https://stackoverflow.com/questions/62611881/data-sql-with-spring-boot-jpa-postresql-is-not-loading
+spring.sql.init.schema-locations= classpath:schema-postgresql.sql
 
 
 # Maximum number of simultaneous connections to the DB
