--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -66,8 +66,8 @@ server.port=8081
 # From https://www.baeldung.com/spring-boot-data-sql-and-schema-sql
 spring.jpa.defer-datasource-initialization = true
 # To not initialize the schema on startup, because that invalidates the usage of the schema file
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 
 # To be able to actually use the schema file, since the schema file is disabled for not embedded databases.
 # The second property is added because when trying the project in another computer, the schema-postgresql.sql is not added
@@ -75,11 +75,12 @@ spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
 spring.sql.init.platform=postgresql
 spring.datasource.initialize = true
-spring.sql.init.data-locations=classpath:schema-postgresql.sql
 
 # Even with the two previous properties, data-postgresql.sql and schema-postgresql.sql are not loaded. We must include these keys
 # From https://stackoverflow.com/questions/62611881/data-sql-with-spring-boot-jpa-postresql-is-not-loading
-spring.sql.init.schema-locations= classpath:schema-postgresql.sql
+spring.sql.init.schema-locations=classpath:schema-postgresql.sql
+spring.sql.init.data-locations=classpath:data-postgresql.sql
+
 
 
 # Maximum number of simultaneous connections to the DB
@@ -149,4 +150,5 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 # Configure lazy initializations vs eager. In production should be true, but for many reasons it makes no sense to not
 # initialize the objects when they are pulled from DB in repository code
-spring.main.lazy-initialization=true
+# If the following line is present, sql initialization scripts are not called
+# spring.main.lazy-initialization=true
