ACLS changes and pom changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -151,4 +151,4 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 # Configure lazy initializations vs eager. In production should be true, but for many reasons it makes no sense to not
 # initialize the objects when they are pulled from DB in repository code
 # If the following line is present, sql initialization scripts are not called
-# spring.main.lazy-initialization=true
+spring.main.lazy-initialization=true
