--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,7 +75,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
 spring.sql.init.platform=postgresql
 spring.datasource.initialize = true
-spring.sql.init.data-locations=classpath:schema-postgresql.sql
+spring.sql.init.data-locations=classpath:data-postgresql.sql
 
 # Even with the two previous properties, data-postgresql.sql and schema-postgresql.sql are not loaded. We must include these keys
 # From https://stackoverflow.com/questions/62611881/data-sql-with-spring-boot-jpa-postresql-is-not-loading
@@ -149,4 +149,4 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 # Configure lazy initializations vs eager. In production should be true, but for many reasons it makes no sense to not
 # initialize the objects when they are pulled from DB in repository code
-spring.main.lazy-initialization=true
+# spring.main.lazy-initialization=true
